connect server to client and add socket io on client

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "url": "https://github.com/opedro-c/pong/issues"
   },
   "homepage": "https://github.com/opedro-c/pong#readme",
+  "type": "module",
   "dependencies": {
     "socket.io": "^4.6.1"
   }
