--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pong",
   "version": "1.0.0",
   "description": "This game aims to let two players on different computers play pong together on the web browser",
-  "main": "index.js",
+  "main": "server/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/opedro-c/pong#readme",
   "type": "module",
   "dependencies": {
-    "socket.io": "^4.6.1"
+    "matter-js": "^0.19.0",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1"
   }
 }
