--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io-client": "^4.6.1"
+    "express": "^4.18.2"
   },
   "type": "module"
 }
